--- a/index.html
+++ b/index.html
@@ -4,176 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitSync - Your Fitness Journey Starts Here</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            padding: 1rem 0;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            z-index: 100;
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #667eea;
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-
-        .nav-links a:hover {
-            color: #667eea;
-        }
-
-        .hero {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
-            color: white;
-            padding-top: 80px;
-        }
-
-        .hero-content h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
-            font-weight: 700;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
-        .hero-content p {
-            font-size: 1.3rem;
-            margin-bottom: 2rem;
-            opacity: 0.9;
-        }
-
-        .cta-button {
-            display: inline-block;
-            padding: 15px 30px;
-            background: white;
-            color: #667eea;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: bold;
-            font-size: 1.1rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .cta-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
-        }
-
-        .features {
-            padding: 80px 0;
-            background: white;
-        }
-
-        .features h2 {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            color: #333;
-        }
-
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        .feature-card {
-            text-align: center;
-            padding: 2rem;
-            border-radius: 15px;
-            background: #f8f9fa;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        }
-
-        .feature-icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            display: block;
-        }
-
-        .feature-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: #333;
-        }
-
-        .feature-card p {
-            color: #666;
-        }
-
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        @media (max-width: 768px) {
-            .hero-content h1 {
-                font-size: 2.5rem;
-            }
-            
-            .nav-links {
-                display: none;
-            }
-            
-            .features-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -191,30 +22,48 @@
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
-                <h1>Welcome to FitSync</h1>
-                <p>Synchronize your fitness journey with smart tracking, personalized workouts, and seamless progress monitoring</p>
-                <a href="#features" class="cta-button">Get Started</a>
+                <h1>FitSync</h1>
+                <p>The complete fitness ecosystem for serious athletes. Track workouts, monitor nutrition, visualize muscle development, and sync with HealthKit—all in one intelligent app.</p>
+                <div class="cta-buttons">
+                    <a href="#download" class="cta-button primary">Download App</a>
+                    <a href="#features" class="cta-button secondary">Learn More</a>
+                </div>
             </div>
         </section>
 
         <section class="features" id="features">
             <div class="container">
-                <h2>Why Choose FitSync?</h2>
+                <h2>Complete Fitness Intelligence</h2>
                 <div class="features-grid">
                     <div class="feature-card">
-                        <span class="feature-icon">📊</span>
-                        <h3>Smart Analytics</h3>
-                        <p>Track your progress with advanced analytics and personalized insights to optimize your fitness journey.</p>
+                        <span class="feature-icon">💪</span>
+                        <h3>Muscle Mapping & Analytics</h3>
+                        <p>Visualize muscle development with interactive body mapping. Track strength gains, volume, and progressive overload with detailed analytics.</p>
                     </div>
                     <div class="feature-card">
-                        <span class="feature-icon">🏋️</span>
-                        <h3>Custom Workouts</h3>
-                        <p>Get personalized workout plans tailored to your fitness level, goals, and available equipment.</p>
+                        <span class="feature-icon">🍎</span>
+                        <h3>Smart Nutrition Tracking</h3>
+                        <p>Barcode scanning, macro tracking, and intelligent nutrition goals. Seamlessly log meals with our advanced food database and OCR technology.</p>
                     </div>
                     <div class="feature-card">
-                        <span class="feature-icon">📱</span>
-                        <h3>Cross-Platform Sync</h3>
-                        <p>Access your fitness data seamlessly across all your devices with real-time synchronization.</p>
+                        <span class="feature-icon">🏃</span>
+                        <h3>Comprehensive Cardio</h3>
+                        <p>GPS route tracking, real-time pace monitoring, and detailed workout analysis. Integrated with HealthKit for complete health sync.</p>
+                    </div>
+                    <div class="feature-card">
+                        <span class="feature-icon">📈</span>
+                        <h3>Workout Intelligence</h3>
+                        <p>Smart routine generation, exercise difficulty scaling, and adaptive workout plans. Background tracking for steps and activity.</p>
+                    </div>
+                    <div class="feature-card">
+                        <span class="feature-icon">🔗</span>
+                        <h3>HealthKit Integration</h3>
+                        <p>Seamless sync with Apple Health, step tracking, weight monitoring, and calorie calculations. Real-time background data collection.</p>
+                    </div>
+                    <div class="feature-card">
+                        <span class="feature-icon">⚡</span>
+                        <h3>Real-Time Sync</h3>
+                        <p>Cloud-powered data synchronization across devices. Offline-capable with intelligent caching and optimistic updates.</p>
                     </div>
                 </div>
             </div>
@@ -223,34 +72,17 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 FitSync. All rights reserved. Your fitness journey starts here.</p>
+            <div class="download-section" id="download">
+                <h3>Ready to Transform Your Fitness?</h3>
+                <div class="app-store-buttons">
+                    <a href="#" class="store-button ios">📱 Download for iOS</a>
+                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                </div>
+            </div>
+            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
         </div>
     </footer>
 
-    <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Add scroll effect to header
-        window.addEventListener('scroll', () => {
-            const header = document.querySelector('header');
-            if (window.scrollY > 100) {
-                header.style.background = 'rgba(255, 255, 255, 0.98)';
-            } else {
-                header.style.background = 'rgba(255, 255, 255, 0.95)';
-            }
-        });
-    </script>
+    <script src="js/main.js"></script>
 </body>
 </html>
