--- a/about/index.html
+++ b/about/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About FitSync - The Complete Fitness Ecosystem</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <nav class="container">
             <div class="logo">FitSync</div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/" class="active">About</a></li>
+                <li><a href="/#features">Features</a></li>
+                <li><a href="/contact/">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -113,7 +113,7 @@
                     <p>Join thousands of athletes who've made the switch to intelligent fitness tracking.</p>
                     <div class="cta-buttons">
                         <a href="#download" class="cta-button primary">Download FitSync</a>
-                        <a href="index.html#features" class="cta-button secondary">Explore Features</a>
+                        <a href="/#features" class="cta-button secondary">Explore Features</a>
                     </div>
                 </div>
             </div>
@@ -133,6 +133,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
