--- a/contact/index.html
+++ b/contact/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact FitSync - Support & Feedback</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <nav class="container">
             <div class="logo">FitSync</div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="index.html#features">Features</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/#features">Features</a></li>
+                <li><a href="/contact/" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -153,6 +153,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
