--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about/" class="active">About</a></li>
                 <li><a href="/#features">Features</a></li>
+                <li><a href="/faq/">FAQ</a></li>
                 <li><a href="/contact/">Contact</a></li>
             </ul>
         </nav>
