--- a/contact/index.html
+++ b/contact/index.html
@@ -74,19 +74,19 @@
                         <div class="support-card">
                             <h3>📧 Email Support</h3>
                             <p>For technical issues and account support</p>
-                            <a href="mailto:support@fitsync-app.com">support@fitsync-app.com</a>
+                            <a href="mailto:support@fitsync.app">support@fitsync.app</a>
                         </div>
 
                         <div class="support-card">
                             <h3>💡 Feature Requests</h3>
                             <p>Have an idea to make FitSync better?</p>
-                            <a href="mailto:feedback@fitsync-app.com">feedback@fitsync-app.com</a>
+                            <a href="mailto:support@fitsync.app">feedback@fitsync.app</a>
                         </div>
 
                         <div class="support-card">
                             <h3>🐛 Bug Reports</h3>
                             <p>Found a bug? Help us fix it quickly</p>
-                            <a href="mailto:bugs@fitsync-app.com">bugs@fitsync-app.com</a>
+                            <a href="mailto:support@fitsync.app">bugs@fitsync.app</a>
                         </div>
 
                         <div class="support-card">
