--- a/contact/index.html
+++ b/contact/index.html
@@ -80,13 +80,13 @@
                         <div class="support-card">
                             <h3>💡 Feature Requests</h3>
                             <p>Have an idea to make FitSync better?</p>
-                            <a href="mailto:support@fitsync.app">feedback@fitsync.app</a>
+                            <a href="mailto:support@fitsync.app">support@fitsync.app</a>
                         </div>
 
                         <div class="support-card">
                             <h3>🐛 Bug Reports</h3>
                             <p>Found a bug? Help us fix it quickly</p>
-                            <a href="mailto:support@fitsync.app">bugs@fitsync.app</a>
+                            <a href="mailto:support@fitsync.app">support@fitsync.app</a>
                         </div>
 
                         <div class="support-card">
