Main marketing slogan change

--- a/about-creator/index.html
+++ b/about-creator/index.html
@@ -117,7 +117,7 @@
                 <div class="creator-vision">
                     <h2>Vision for FitSync</h2>
                     <div class="vision-content">
-                        <p>My goal isn't just to create another fitness app - it's to build the definitive platform for serious fitness enthusiasts. I envision FitSync becoming the central hub where all aspects of your fitness life connect seamlessly.</p>
+                        <p>My goal isn't just to create another fitness app - it's to revolutionize how everyone approaches fitness tracking. I envision FitSync as the world's first truly unified platform where workout tracking, nutrition monitoring, and cardio analysis seamlessly connect for fitness enthusiasts of all levels.</p>
 
                         <div class="future-features">
                             <h3>What's Next</h3>
@@ -177,7 +177,7 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
-            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
+            <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
 
