--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>About FitSync</h1>
-                    <p>Building the most intelligent fitness platform for serious athletes and fitness enthusiasts who demand precision, insight, and results.</p>
+                    <p>Building the world's first truly unified fitness platform. Revolutionary technology that brings together workout tracking, nutrition monitoring, and cardio analysis for fitness enthusiasts of all levels.</p>
                 </div>
             </div>
         </section>
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="about-section">
                     <h2>Our Mission</h2>
-                    <p>FitSync was born from the frustration of fragmented fitness tracking. We believe serious athletes deserve a unified ecosystem that understands the complexity of true fitness—not just step counting, but intelligent analysis of strength progression, nutritional optimization, and performance insights that actually drive results.</p>
+                    <p>FitSync was born from the frustration of fragmented fitness tracking. For too long, fitness enthusiasts have been forced to juggle multiple apps—one for workouts, another for nutrition, and yet another for cardio. We've created the world's first platform to seamlessly combine all three, ushering in a new era of intelligent, unified fitness tracking that actually drives results.</p>
                 </div>
 
                 <div class="about-section">
@@ -130,7 +130,7 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
-            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
+            <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
 
