--- a/contact/index.html
+++ b/contact/index.html
@@ -150,7 +150,7 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
-            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
+            <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
 
