--- a/faq/index.html
+++ b/faq/index.html
@@ -389,7 +389,7 @@
                 <h3>Questions Not Answered?</h3>
                 <p><a href="/contact/" style="color: #667eea;">Contact our support team</a> - we're here to help!</p>
             </div>
-            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
+            <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
 
