--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="hero" id="home">
             <div class="hero-content">
                 <h1>FitSync</h1>
-                <p>The complete fitness ecosystem for serious athletes. Track workouts, monitor nutrition, visualize muscle development, and sync with HealthKit—all in one intelligent app.</p>
+                <p>The world's first truly unified fitness platform. Revolutionary technology that seamlessly combines workout tracking, nutrition monitoring, and cardio analysis—all in one intelligent app. Welcome to the new era of fitness.</p>
                 <div class="cta-buttons">
                     <a href="#download" class="cta-button primary">Download App</a>
                     <a href="#features" class="cta-button secondary">Learn More</a>
@@ -80,7 +80,7 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
-            <p>&copy; 2024 FitSync. All rights reserved. The complete fitness ecosystem for serious athletes.</p>
+            <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
 
