Added footer links

--- a/reset-password/index.html
+++ b/reset-password/index.html
@@ -146,6 +146,10 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
+            <div class="footer-links">
+                <a href="/privacy-policy/">Privacy Policy</a>
+                <a href="/about-creator/">About The Creator</a>
+            </div>
             <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
