--- a/faq/index.html
+++ b/faq/index.html
@@ -389,6 +389,10 @@
                 <h3>Questions Not Answered?</h3>
                 <p><a href="/contact/" style="color: #667eea;">Contact our support team</a> - we're here to help!</p>
             </div>
+            <div class="footer-links">
+                <a href="/privacy-policy/">Privacy Policy</a>
+                <a href="/about-creator/">About The Creator</a>
+            </div>
             <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
