--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -326,6 +326,10 @@
                     <a href="#" class="store-button android">🤖 Get it on Android</a>
                 </div>
             </div>
+            <div class="footer-links">
+                <a href="/about/">About FitSync</a>
+                <a href="/about-creator/">About The Creator</a>
+            </div>
             <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
         </div>
     </footer>
