--- a/about-creator/index.html
+++ b/about-creator/index.html
@@ -138,7 +138,7 @@
 
                         <div class="contact-methods">
                             <div class="contact-method">
-                                <span class="contact-icon">📧</span>
+                                <span class="contact-icon"></span>
                                 <div>
                                     <h4>Email</h4>
                                     <a href="mailto:support@fitsync.app">support@fitsync.app</a>
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="contact-method">
-                                <span class="contact-icon">💬</span>
+                                <span class="contact-icon"></span>
                                 <div>
                                     <h4>Feedback</h4>
                                     <p>I read every message and often implement user suggestions</p>
@@ -170,11 +170,18 @@
 
     <footer>
         <div class="container">
-            <div class="download-section">
+            <div class="app-download-cta">
                 <h3>Download FitSync Today</h3>
-                <div class="app-store-buttons">
-                    <a href="#" class="store-button ios">📱 Download for iOS</a>
-                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                <p>Join the FitSync community and experience the future of fitness tracking</p>
+                <div class="store-buttons">
+                    <a href="#" class="store-button ios">
+                        <span class="store-icon">📱</span>
+                        Download for iOS
+                    </a>
+                    <a href="#" class="store-button android">
+                        <span class="store-icon">🤖</span>
+                        Get it on Android
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
