--- a/about/index.html
+++ b/about/index.html
@@ -60,12 +60,12 @@
                 </div>
 
                 <div class="about-section">
-                    <h2>Built for Serious Athletes</h2>
-                    <p>Whether you're a powerlifter tracking 1RM progression, a runner optimizing pace and route efficiency, or a bodybuilder fine-tuning macro ratios, FitSync provides the depth and precision your training deserves.</p>
+                    <h2>Built for Beginner and Serious Athletes</h2>
+                    <p>Whether you're a powerlifter tracking 1RM progression, a beginner trying to lose some weight, a runner optimizing pace and route efficiency, or a bodybuilder fine-tuning macro ratios, FitSync provides the depth and precision your training deserves.</p>
                     
                     <div class="stats-grid">
                         <div class="stat-item">
-                            <span class="stat-number">10,000+</span>
+                            <span class="stat-number">400+</span>
                             <span class="stat-label">Exercise Database</span>
                         </div>
                         <div class="stat-item">
@@ -123,11 +123,18 @@
 
     <footer>
         <div class="container">
-            <div class="download-section" id="download">
+            <div class="app-download-cta" id="download">
                 <h3>Available Now</h3>
-                <div class="app-store-buttons">
-                    <a href="#" class="store-button ios">📱 Download for iOS</a>
-                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                <p>Experience the world's first truly unified fitness platform</p>
+                <div class="store-buttons">
+                    <a href="#" class="store-button ios">
+                        <span class="store-icon">📱</span>
+                        Download for iOS
+                    </a>
+                    <a href="#" class="store-button android">
+                        <span class="store-icon">🤖</span>
+                        Get it on Android
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
