--- a/confirm-email/index.html
+++ b/confirm-email/index.html
@@ -127,11 +127,18 @@
 
     <footer>
         <div class="container">
-            <div class="download-section">
+            <div class="app-download-cta">
                 <h3>Ready to Transform Your Fitness?</h3>
-                <div class="app-store-buttons">
-                    <a href="#" class="store-button ios">📱 Download for iOS</a>
-                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                <p>Download FitSync and start your revolutionary fitness journey</p>
+                <div class="store-buttons">
+                    <a href="#" class="store-button ios">
+                        <span class="store-icon">📱</span>
+                        Download for iOS
+                    </a>
+                    <a href="#" class="store-button android">
+                        <span class="store-icon">🤖</span>
+                        Get it on Android
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
