--- a/contact/index.html
+++ b/contact/index.html
@@ -143,11 +143,18 @@
 
     <footer>
         <div class="container">
-            <div class="download-section">
+            <div class="app-download-cta">
                 <h3>Download FitSync Today</h3>
-                <div class="app-store-buttons">
-                    <a href="#" class="store-button ios">📱 Download for iOS</a>
-                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                <p>Get started with the revolutionary all-in-one fitness platform</p>
+                <div class="store-buttons">
+                    <a href="#" class="store-button ios">
+                        <span class="store-icon">📱</span>
+                        Download for iOS
+                    </a>
+                    <a href="#" class="store-button android">
+                        <span class="store-icon">🤖</span>
+                        Get it on Android
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
