--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="container">
             <div class="logo">FitSync</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home" class="active">Home</a></li>
                 <li><a href="/about/">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="/faq/">FAQ</a></li>
@@ -73,11 +73,18 @@
 
     <footer>
         <div class="container">
-            <div class="download-section" id="download">
+            <div class="app-download-cta" id="download">
                 <h3>Ready to Transform Your Fitness?</h3>
-                <div class="app-store-buttons">
-                    <a href="#" class="store-button ios">📱 Download for iOS</a>
-                    <a href="#" class="store-button android">🤖 Get it on Android</a>
+                <p>Download FitSync today and experience the revolutionary all-in-one fitness platform</p>
+                <div class="store-buttons">
+                    <a href="#" class="store-button ios">
+                        <span class="store-icon">📱</span>
+                        Download for iOS
+                    </a>
+                    <a href="#" class="store-button android">
+                        <span class="store-icon">🤖</span>
+                        Get it on Android
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
