coming soon text

--- a/faq/index.html
+++ b/faq/index.html
@@ -482,7 +482,7 @@
                 <div class="faq-item">
                     <h3 class="faq-question">Can I export my data from FitSync?</h3>
                     <div class="faq-answer">
-                        <p>Yes! FitSync supports data portability:</p>
+                        <p>It is coming soon!:</p>
                         <ul>
                             <li>Export workout history as CSV/JSON</li>
                             <li>Download food logs and nutrition data</li>
