--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -334,6 +334,7 @@
                 </div>
             </div>
             <div class="footer-links">
+                <a href="/terms-of-use/">Terms of Use</a>
                 <a href="/about/">About FitSync</a>
                 <a href="/about-creator/">About The Creator</a>
             </div>
