--- a/404.html
+++ b/404.html
@@ -80,6 +80,7 @@
             </div>
             <div class="footer-links">
                 <a href="/privacy-policy/">Privacy Policy</a>
+                <a href="/terms-of-use/">Terms of Use</a>
                 <a href="/about-creator/">About The Creator</a>
             </div>
             <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
