--- a/about-creator/index.html
+++ b/about-creator/index.html
@@ -186,6 +186,7 @@
             </div>
             <div class="footer-links">
                 <a href="/privacy-policy/">Privacy Policy</a>
+                <a href="/terms-of-use/">Terms of Use</a>
                 <a href="/about/">About FitSync</a>
             </div>
             <p>&copy; 2024 FitSync. All rights reserved. The revolutionary all-in-one fitness platform for everyone.</p>
