Added correct app link for email confirmed

--- a/about-creator/index.html
+++ b/about-creator/index.html
@@ -174,7 +174,7 @@
                 <h3>Download FitSync Today</h3>
                 <p>Join the FitSync community and experience the future of fitness tracking</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
