--- a/confirm-email/index.html
+++ b/confirm-email/index.html
@@ -59,7 +59,7 @@
                     <p>Continue your fitness journey on mobile with our comprehensive tracking and analytics platform.</p>
                     
                     <div class="download-buttons">
-                        <a href="#" class="download-button ios" id="iosButton">
+                        <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="download-button ios" id="iosButton">
                             <div class="button-content">
                                 <span class="store-icon">📱</span>
                                 <div class="button-text">
@@ -131,7 +131,7 @@
                 <h3>Ready to Transform Your Fitness?</h3>
                 <p>Download FitSync and start your revolutionary fitness journey</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
