--- a/reset-password/index.html
+++ b/reset-password/index.html
@@ -143,7 +143,7 @@
                 <h3>Don't Have FitSync Yet?</h3>
                 <p>Get the revolutionary all-in-one fitness platform today</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
