--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
                 <h3>Ready to Transform Your Fitness?</h3>
                 <p>Discover the revolutionary all-in-one fitness platform</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
