--- a/about/index.html
+++ b/about/index.html
@@ -127,7 +127,7 @@
                 <h3>Available Now</h3>
                 <p>Experience the world's first truly unified fitness platform</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
