--- a/contact/index.html
+++ b/contact/index.html
@@ -147,7 +147,7 @@
                 <h3>Download FitSync Today</h3>
                 <p>Get started with the revolutionary all-in-one fitness platform</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
