--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -323,7 +323,7 @@
                 <h3>Download FitSync Today</h3>
                 <p>Experience privacy-first fitness tracking with FitSync</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
