--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -363,7 +363,7 @@
                 <h3>Download FitSync Today</h3>
                 <p>Start your fitness journey with FitSync</p>
                 <div class="store-buttons">
-                    <a href="#" class="store-button ios">
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
                         <span class="store-icon">📱</span>
                         Download for iOS
                     </a>
