Website Theme update

--- a/faq/index.html
+++ b/faq/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <style>
         .faq-hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4285F4 0%, #1a73e8 100%);
             color: white;
             padding: 120px 0 60px 0;
             text-align: center;
@@ -99,7 +99,7 @@
             content: '▼';
             font-size: 1.2rem;
             transition: transform 0.3s ease;
-            color: #667eea;
+            color: #4285F4;
             width: 24px;
             height: 24px;
             display: flex;
@@ -145,7 +145,7 @@
         }
 
         .faq-answer strong {
-            color: #667eea;
+            color: #4285F4;
             font-weight: 600;
         }
 
@@ -157,16 +157,16 @@
         }
         
         .feature-highlight {
-            background: rgba(102, 126, 234, 0.15);
+            background: rgba(66, 133, 244, 0.15);
             padding: 20px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #4285F4;
             margin: 20px 0;
             border-radius: 0 8px 8px 0;
             color: rgba(255, 255, 255, 0.95);
         }
         
         .app-download-cta {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4285F4 0%, #1a73e8 100%);
             color: white;
             padding: 50px 40px;
             border-radius: 16px;
@@ -271,8 +271,8 @@
 
         #faq-search:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 20px rgba(102, 126, 234, 0.3);
+            border-color: #4285F4;
+            box-shadow: 0 0 20px rgba(66, 133, 244, 0.3);
         }
 
         #faq-search::placeholder {
@@ -310,8 +310,8 @@
 
         .category-btn:hover,
         .category-btn.active {
-            border-color: #667eea;
-            background: rgba(102, 126, 234, 0.2);
+            border-color: #4285F4;
+            background: rgba(66, 133, 244, 0.2);
             color: white;
             transform: translateY(-2px);
         }
@@ -641,7 +641,7 @@
         <div class="container">
             <div class="download-section">
                 <h3>Questions Not Answered?</h3>
-                <p><a href="/contact/" style="color: #667eea;">Contact our support team</a> - we're here to help!</p>
+                <p><a href="/contact/" style="color: #4285F4;">Contact our support team</a> - we're here to help!</p>
             </div>
             <div class="footer-links">
                 <a href="/privacy-policy/">Privacy Policy</a>
