--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
-                <h1>FitSync</h1>
-                <p>The world's first truly unified fitness platform. Revolutionary technology that seamlessly combines workout tracking, nutrition monitoring, and cardio analysis—all in one intelligent app. Welcome to the new era of fitness.</p>
+                <h1>Track. Fuel.<br>Transform. Sync.</h1>
+                <p class="hero-tagline">Every workout counts with FitSync.</p>
                 <div class="cta-buttons">
                     <a href="#download" class="cta-button primary">Download App</a>
                     <a href="#features" class="cta-button secondary">Learn More</a>
