--- a/faq/index.html
+++ b/faq/index.html
@@ -624,9 +624,8 @@
                 <h3>Ready to Start Your Fitness Journey?</h3>
                 <p>Download FitSync today and experience the revolutionary all-in-one fitness platform</p>
                 <div class="store-buttons">
-                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="store-button ios">
-                        <span class="store-icon">📱</span>
-                        Download for iOS
+                    <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="app-store-badge">
+                        <img src="../Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" alt="Download on the App Store">
                     </a>
                     <a href="#" class="store-button android">
                         <span class="store-icon">🤖</span>
