--- a/about-creator/index.html
+++ b/about-creator/index.html
@@ -177,9 +177,8 @@
                     <a href="https://apps.apple.com/us/app/fitsync-fitness-tracker/id6749923790" class="app-store-badge">
                         <img src="../Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" alt="Download on the App Store">
                     </a>
-                    <a href="#" class="store-button android">
-                        <span class="store-icon">🤖</span>
-                        Get it on Android
+                    <a href="#" class="google-play-badge">
+                        <img src="../GetItOnGooglePlay_Badge_Web_color_English.svg" alt="Get it on Google Play">
                     </a>
                 </div>
             </div>
